# painter

./: .gitignore  CMakeLists.txt  Dockerfile  README.Russian.md  README.md
bash/: start_program.sh
src/: graphics.cpp  graphics.h  html.cpp  html.h  html_generator.cpp  html_generator.h  main.cpp  tests.cpp  tests.h
tests/: multyple  two_squares
